Revision history for Alien-Tidyp

1.02.1	10/05/2010
	- tidyp 1.02 sources

1.0.1	25/04/2010
	- tidyp 1.0 sources
	- gmake as a fallback on solaris reverted

0.99.7	06/04/2010
	- Fix for no_index (another try)
	- Use gmake as a fallback on solaris

0.99.6	06/04/2010
	- Better GNU make detection (solaris, netbsd CPAN tester failures)
	- Fix for no_index

0.99.5	04/04/2010
	- Fixing FreeBSD CPAN tester failures
	- Fixing Win32 CPAN tester failures
	- Build.PL cosmetics
	- Quoting tidyp license

0.99.4	02/04/2010
	- The first CPAN release

0.99.3	01/03/2010
	- Initial version by kmx