@@ -1,3 +1,0 @@
-[submodule "src"]
-	path = src
-	url = git://github.com/petdance/tidyp.git
